--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "date-fns": "^3.3.1",
     "emoji-mart": "^5.5.2",
     "livekit-client": "^2.0.1",
+    "livekit-server-sdk": "^2.0.0",
     "lucide-react": "^0.320.0",
     "next": "14.1.0",
     "next-themes": "^0.2.1",
